# videxer

./: .gitignore  pyproject.toml  requirements.txt  todo.md
videxer/: __init__.py  __main__.py  cli.py  indexer.py  template.html  utils.py
web_media_lib/: __init__.py  cli.py  indexer.py
