[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videxer"
version = "0.1.0"
description = "Static media library generator that creates index.html and JSON files for viewing video collections."
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.7",
  "opencv-python>=4.8.0",
  "Pillow>=9.0.0",
  "PyYAML>=6.0",
  "ffmpeg-python>=0.2.0",
]

[project.scripts]
videxer = "videxer.cli:cli"

[tool.setuptools.packages]
find = {}
